--- a/Pokemon/index.html
+++ b/Pokemon/index.html
@@ -9,8 +9,8 @@
 </head>
 
 <body>
-    <h1>Look at my pokemon!</h1>
-    <section id="container"></section>
+    <h1>National Pokedex</h1>
+    <section id = "container"></section>
     <script src="app.js"></script>
 </body>
 
